--- a/app/design/frontend/Mazentop/mazentop/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/app/design/frontend/Mazentop/mazentop/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -170,7 +170,7 @@ var google_remarketing_only = true;
     {
         "#product_addtocart_form": {
             "catalogAddToCart": {
-                "bindSubmit": false
+                "bindSubmit": true
             }
         }
     }
