--- a/app/design/frontend/Mazentop/mazentop/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Mazentop/mazentop/Magento_Catalog/web/css/source/_module.less
@@ -5,7 +5,7 @@
 
 @import 'module/_listings.less';
 @import 'module/_toolbar.less';
-
+@import 'module/_cartSuccess.less';
 //
 //  Variables
 //  _____________________________________________
@@ -1371,4 +1371,14 @@
     img{
         vertical-align: middle;
     }
+}
+
+.disview{
+    display: block;
+    text-align: center;
+
+}
+ol.list.items.product-items{
+    padding:  15px 10px 0 10px;
+
 }
