--- a/app/design/frontend/Mazentop/mobile/Codazon_ProductFilter/web/css/source/_module.less
+++ b/app/design/frontend/Mazentop/mobile/Codazon_ProductFilter/web/css/source/_module.less
@@ -352,7 +352,9 @@
     .product-item{
         .product-item-info{
             .product-item-inner{
-                /*display: block !important;*/
+                display: inline-block !important;
+                float: right;
+               margin-top: 7px;
             }
         }
     }
