--- a/app/design/frontend/Mazentop/mobile/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Mazentop/mobile/Magento_Catalog/web/css/source/_module.less
@@ -5,7 +5,7 @@
 
 @import 'module/_listings.less';
 @import 'module/_toolbar.less';
-
+@import "module/_cartSuccess.less";
 //
 //  Variables
 //  _____________________________________________
@@ -1362,7 +1362,14 @@
 .product-item-details .product-item-name a:hover{
     color:#a11a52;
 }
-
+.product-item-details .disview{
+    display: block;
+    text-align: center;
+}
+span.disview {
+    display: block;
+    text-align: center;
+}
 .catalog-product-view .product-info-main .product-add-form .product-options-wrapper .options-list .field.admin__field-option .label{
     max-width:110px;
 }
