--- a/app/design/frontend/Mazentop/mobile/Magento_Theme/templates/html/footer/footer.phtml
+++ b/app/design/frontend/Mazentop/mobile/Magento_Theme/templates/html/footer/footer.phtml
@@ -50,41 +50,41 @@
     </div>
 </div>
 <div class="non-space"></div>
-<div class="footer-menu">
+<!--<div class="footer-menu">
     <ul>
         <li class="home">
-            <a href="<?php echo $this->getUrl();?>">
-                <div class="img"><img src="<?php echo $this->getViewFileUrl('images/home.png'); ?>" alt="<?php echo __('Home')?>" /></div>
-                <div  class="name"><?php echo __('Home')?></div>
+            <a href="<?php /*echo $this->getUrl();*/?>">
+                <div class="img"><img src="<?php /*echo $this->getViewFileUrl('images/home.png'); */?>" alt="<?php /*echo __('Home')*/?>" /></div>
+                <div  class="name"><?php /*echo __('Home')*/?></div>
             </a>
         </li>
         <li class="account">
-            <a href="<?php echo $this->getUrl('customer/account/');?>">
-                <div class="img"><img src="<?php echo $this->getViewFileUrl('images/account.png'); ?>" alt="<?php echo __('Account')?>" /></div>
-                <div  class="name"><?php echo __('Account')?></div>
+            <a href="<?php /*echo $this->getUrl('customer/account/');*/?>">
+                <div class="img"><img src="<?php /*echo $this->getViewFileUrl('images/account.png'); */?>" alt="<?php /*echo __('Account')*/?>" /></div>
+                <div  class="name"><?php /*echo __('Account')*/?></div>
             </a>
         </li>
         <li class="cart">
-            <?php echo $block->getChildHtml('minicart');?>
-            <a href="<?php echo $this->getUrl('checkout/cart/');?>">                
-                <div class="img"><img src="<?php echo $this->getViewFileUrl('images/cart.png'); ?>" alt="<?php echo __('Cart')?>" /></div>
-                <div  class="name"><?php echo __('Cart')?></div>
+            <?php /*echo $block->getChildHtml('minicart');*/?>
+            <a href="<?php /*echo $this->getUrl('checkout/cart/');*/?>">
+                <div class="img"><img src="<?php /*echo $this->getViewFileUrl('images/cart.png'); */?>" alt="<?php /*echo __('Cart')*/?>" /></div>
+                <div  class="name"><?php /*echo __('Cart')*/?></div>
             </a>
         </li>
         <li class="wishlist">
-            <a href="<?php echo $this->getUrl('wishlist');?>">
-                <div class="img"><img src="<?php echo $this->getViewFileUrl('images/wishlist.png'); ?>" alt="<?php echo __('Wish List')?>" /></div>
-                <div class="name"><?php echo __('Wish list')?></div>
+            <a href="<?php /*echo $this->getUrl('wishlist');*/?>">
+                <div class="img"><img src="<?php /*echo $this->getViewFileUrl('images/wishlist.png'); */?>" alt="<?php /*echo __('Wish List')*/?>" /></div>
+                <div class="name"><?php /*echo __('Wish list')*/?></div>
             </a>
         </li>
         <li class="chat">
             <a href="javascript:void(0);">
-                <div class="img"><img src="<?php echo $this->getViewFileUrl('images/chat.png'); ?>" alt="<?php echo __('Chat')?>" /></div>
-                <div class="name"><?php echo __('Chat')?></div>
+                <div class="img"><img src="<?php /*echo $this->getViewFileUrl('images/chat.png'); */?>" alt="<?php /*echo __('Chat')*/?>" /></div>
+                <div class="name"><?php /*echo __('Chat')*/?></div>
             </a>
         </li>
     </ul>
-</div>
+</div>-->
 
 <script>
 require([
