--- a/app/design/frontend/Mazentop/mazentop/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Mazentop/mazentop/Magento_Theme/web/css/source/_module.less
@@ -57,11 +57,17 @@
 @filter-link: @color-gray-darken4;
 @filter-link-hover: darken(@filter-link, 30%);
 @filter-quantity: @color-gray52;
-
+.option_optionStock {
+    background: linear-gradient(14deg, transparent 48.5%, rgb(51, 51, 51) 51.5%, rgb(51, 51, 51) 36.5%, transparent 53.5%) !important;
+    pointer-events: none !important;
+    cursor: not-allowed !important;
+}
 //
 //  Common
 //  _____________________________________________
-
+.page-wrapper{
+    margin-top: 80px;
+}
 & when (@media-common = true) {
     body {
         .lib-css(background-color, @page__background-color);
