--- a/app/design/frontend/Mazentop/mazentop/Magento_Theme/web/css/source/module/_cpanel.less
+++ b/app/design/frontend/Mazentop/mazentop/Magento_Theme/web/css/source/module/_cpanel.less
@@ -1109,6 +1109,7 @@ footer block
                     /*width: 50%;*/
                     float: right;
                     margin-top: -38px;
+                    margin-right: -40px;
                 }
                 a.towishlist:hover .prompt {
                     /*left: 60%;*/
