--- a/app/design/frontend/Mazentop/mobile/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/app/design/frontend/Mazentop/mobile/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -10,69 +10,69 @@
 <?php $_product = $block->getProduct(); ?>
 <?php $buttonTitle = __('Add to Cart'); ?>
 <?php if ($_product->isSaleable()): ?>
-<div class="box-tocart">
-    <div class="fieldset">      
-        <?php if ($block->shouldRenderQuantity()): ?>
-        <div class="field qty">
-            <label class="label" for="qty"><span><?php /* @escapeNotVerified */ echo __('Qty') ?></span></label>
-            <div class="control">                
-                <input type="number"
-                       name="qty"
-                       id="qty"
-                       maxlength="12"
-                       value="<?php /* @escapeNotVerified */ echo $block->getProductDefaultQty() * 1 ?>"
-                       title="<?php /* @escapeNotVerified */ echo __('Qty') ?>" class="input-text qty"
-                       data-validate="<?php echo $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>"
-                       />
-                <a href="javascript:void(0)" class="reduceQty qtybtn">
-                    <span class="down"></span>
-                </a> 
-                <a href="javascript:void(0)" class="addQty qtybtn">
-                    <span class="up"></span>
-                </a>
-                
-            </div>
-        </div>
-        <?php endif; ?>
-        <?php 
+    <div class="box-tocart">
+        <div class="fieldset">
+            <?php if ($block->shouldRenderQuantity()): ?>
+                <div class="field qty">
+                    <label class="label" for="qty"><span><?php /* @escapeNotVerified */ echo __('Qty') ?></span></label>
+                    <div class="control">
+                        <input type="number"
+                               name="qty"
+                               id="qty"
+                               maxlength="12"
+                               value="<?php /* @escapeNotVerified */ echo $block->getProductDefaultQty() * 1 ?>"
+                               title="<?php /* @escapeNotVerified */ echo __('Qty') ?>" class="input-text qty"
+                               data-validate="<?php echo $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>"
+                        />
+                        <a href="javascript:void(0)" class="reduceQty qtybtn">
+                            <span class="down"></span>
+                        </a>
+                        <a href="javascript:void(0)" class="addQty qtybtn">
+                            <span class="up"></span>
+                        </a>
+
+                    </div>
+                </div>
+            <?php endif; ?>
+            <?php
             $wishCount =  $this->helper('Mazentop\DiscountPrice\Helper\Data')->getWishCount($_product->getId());
             if($wishCount > 0):
-        ?>
-        <div class="wishlistcount">
-            <span><i class="fa fa-heart-o"></i></span>
-            <div class="count"><?php echo $wishCount; ?> &nbsp;<?php echo __('Liked');?></div>
-        </div>
-        <?php endif;?>
-        <div class="stockNum">
-            ( <?php 
-            echo __('Inventory:');
-            echo $this->helper('Mazentop\DiscountPrice\Helper\Data')->getStockNum($_product); 
-            ?> )
-        </div>
-        <div class="total">        
-            <span class="totalprice"><?php echo __('Total Price:')?></span>
-            <div class="price-box">
+                ?>
+                <div class="wishlistcount">
+                    <span><i class="fa fa-heart-o"></i></span>
+                    <div class="count"><?php echo $wishCount; ?> &nbsp;<?php echo __('Liked');?></div>
+                </div>
+            <?php endif;?>
+            <div class="stockNum">
+                ( <?php
+                echo __('Inventory:');
+                echo $this->helper('Mazentop\DiscountPrice\Helper\Data')->getStockNum($_product);
+                ?> )
+            </div>
+            <div class="total">
+                <span class="totalprice"><?php echo __('Total Price:')?></span>
+                <div class="price-box">
                     <span class="price-container price-final_price">
                         <span class="price"></span>
                     </span>
+                </div>
+                <?php /* @escapeNotVerified */ ?>
             </div>
-         <?php /* @escapeNotVerified */ ?>
-        </div>
-        <div class="actions">
-            <button type="submit"
-                    title="<?php /* @escapeNotVerified */ echo $buttonTitle ?>"
-                    class="action primary tocart"
-                    id="product-addtocart-button">
-                <span><?php /* @escapeNotVerified */ echo $buttonTitle ?></span>
-            </button>            
-            <?php echo $block->getChildHtml('', true) ?>
+            <div class="actions">
+                <button type="submit"
+                        title="<?php /* @escapeNotVerified */ echo $buttonTitle ?>"
+                        class="action primary tocart"
+                        id="product-addtocart-button">
+                    <span><?php /* @escapeNotVerified */ echo $buttonTitle ?></span>
+                </button>
+                <?php echo $block->getChildHtml('', true) ?>
+            </div>
         </div>
     </div>
-</div>
 <?php endif; ?>
 <style>
     .box-tocart .actions .paypal.checkout{
-/*        width: 210px;*/
+        /*        width: 210px;*/
         margin-top: 10px;
         position: relative;
         left: initial;
@@ -98,37 +98,37 @@
     }
 </style>
 <script type="text/javascript">
-ga("require", "ec");
-ga("ec:addProduct", {
-    "id": "<?php echo $_product->getSKU();?>",
-    "name": '<?php echo $_product->getName();?>',
-    "price": "<?php echo $_product->getPrice();?>",  
-    "position": 0
-});
-ga("ec:setAction", "detail");
+    ga("require", "ec");
+    ga("ec:addProduct", {
+        "id": "<?php echo $_product->getSKU();?>",
+        "name": '<?php echo $_product->getName();?>',
+        "price": "<?php echo $_product->getPrice();?>",
+        "position": 0
+    });
+    ga("ec:setAction", "detail");
 
-  var google_tag_params = {
-    ecomm_prodid: '<?php echo $_product->getSKU();?>',
-    ecomm_pagetype: 'product',
-};
-/* <![CDATA[ */
-var google_conversion_id = 676273579;
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
-/* ]]> */
+    var google_tag_params = {
+        ecomm_prodid: '<?php echo $_product->getSKU();?>',
+        ecomm_pagetype: 'product',
+    };
+    /* <![CDATA[ */
+    var google_conversion_id = 676273579;
+    var google_custom_params = window.google_tag_params;
+    var google_remarketing_only = true;
+    /* ]]> */
 </script>
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
 </script>
 <noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/676273579/?guid=ON&amp;script=0"/>
-</div>
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/676273579/?guid=ON&amp;script=0"/>
+    </div>
 </noscript>
 
 <script>
     require([
-    "jquery"
-    ], function ($) {        
+        "jquery"
+    ], function ($) {
         $('.paypal.checkout.before.paypal-logo').click(function(){
             ga('send','event','checkout with paypal','click');
         });
@@ -136,10 +136,10 @@ var google_remarketing_only = true;
             var qty = $('#qty').val();
             ga("require", "ec");
             ga("ec:addProduct", {
-              "id": "<?php echo $_product->getSKU();?>",
-              "name": '<?php echo $_product->getName();?>',
-              "price": "<?php echo $_product->getPrice();?>",              
-              "quantity": qty
+                "id": "<?php echo $_product->getSKU();?>",
+                "name": '<?php echo $_product->getName();?>',
+                "price": "<?php echo $_product->getPrice();?>",
+                "quantity": qty
             });
             ga("ec:setAction", "add");
             ga("send", "event", "detail view", "click", "addToCart");
@@ -148,10 +148,10 @@ var google_remarketing_only = true;
             var qty = $('#qty').val();
             ga("require", "ec");
             ga("ec:addProduct", {
-              "id": "<?php echo $_product->getSKU();?>",
-              "name": '<?php echo $_product->getName();?>',
-              "price": "<?php echo $_product->getPrice();?>",              
-              "quantity": qty
+                "id": "<?php echo $_product->getSKU();?>",
+                "name": '<?php echo $_product->getName();?>',
+                "price": "<?php echo $_product->getPrice();?>",
+                "quantity": qty
             });
             ga("ec:setAction", "add");
             ga("send", "event", "detail view", "click", "BuyNow");
@@ -169,11 +169,11 @@ var google_remarketing_only = true;
     }
 </script>
 <?php if (!$block->isRedirectToCartEnabled()) : ?>
-<script type="text/x-magento-init">
+    <script type="text/x-magento-init">
     {
         "#product_addtocart_form": {
             "catalogAddToCart": {
-                "bindSubmit": false
+                "bindSubmit": true
             }
         }
     }
