--- a/app/design/frontend/Mazentop/mobile/Magento_Checkout/templates/cart/minicart.phtml
+++ b/app/design/frontend/Mazentop/mobile/Magento_Checkout/templates/cart/minicart.phtml
@@ -4,49 +4,31 @@
  * See COPYING.txt for license details.
  */
 
+// @codingStandardsIgnoreFile
+
 /** @var $block \Magento\Checkout\Block\Cart\Sidebar */
 ?>
 
 <div data-block="minicart" class="minicart-wrapper">
-    <a class="" href="<?php /* @escapeNotVerified */ echo $block->getShoppingCartUrl(); ?>"
+    <a class="action showcart" href="<?php /* @escapeNotVerified */ echo $block->getShoppingCartUrl(); ?>"
        data-bind="scope: 'minicart_content'">
+        <span class="shopping-bag"></span>
+        <span class="text"><?php /* @escapeNotVerified */ echo __('My Cart'); ?></span>
         <span class="counter qty empty"
-              data-bind="css: { empty: !!getCartParam('summary_count') == false }, blockLoader: isLoading">
+              data-bind="css: { empty: !!getCartParam('summary_count') == false }">
+            <!--, blockLoader: isLoading-->
             <span class="counter-number"><!-- ko text: getCartParam('summary_count') --><!-- /ko --></span>
+            <span class="counter-label">
+            <!-- ko if: getCartParam('summary_count') -->
+                <!-- ko text: getCartParam('summary_count') --><!-- /ko -->
+                <!-- ko i18n: 'items' --><!-- /ko -->
+                <!-- /ko -->
+            </span>
         </span>
     </a>
-    <?php if ($block->getIsNeedToDisplaySideBar()): ?>
-        <div class="block block-minicart empty"
-             data-role="dropdownDialog"
-             data-mage-init='{"dropdownDialog":{
-                "appendTo":"[data-block=minicart]",
-                "triggerTarget":".showcart",
-                "timeout": "2000",
-                "closeOnMouseLeave": false,
-                "closeOnEscape": true,
-                "triggerClass":"active",
-                "parentClass":"active",
-                "buttons":[]}}'>
-            <div id="minicart-content-wrapper" data-bind="scope: 'minicart_content'">
-                <!-- ko template: getTemplate() --><!-- /ko -->
-            </div>
-            <?php /* echo $block->getChildHtml('minicart.addons'); */ ?>
-        </div>
-    <?php endif ?>
+
     <script>
         window.checkout = <?php /* @escapeNotVerified */ echo \Zend_Json::encode($block->getConfig()); ?>;
-    </script>
-    <script>
-        require([
-        "jquery"
-        ], function ($) {
-            $(document).on('click','.block-minicart .action.primary.checkout',function(){
-                ga('send','event','from cart to checkout','click');
-            });
-            $(document).on('click','.checkout.methods .paypal.checkout input',function(){
-                ga('send','event','from cart to paypal','click');
-            });
-        })
     </script>
     <script type="text/x-magento-init">
     {
