--- a/app/design/frontend/Mazentop/mobile/web/css/source/_cpanel.less
+++ b/app/design/frontend/Mazentop/mobile/web/css/source/_cpanel.less
@@ -3,6 +3,9 @@
             margin-top: 20px;
         } */
 }
+
+
+
 .column.main{
     width: 100%;
     max-width:100%;
@@ -961,6 +964,9 @@ footer block
 .page-header .header.panel .header.links{
     display: none;
 }*/
+.page-wrapper{
+    margin-top: 80px;
+}
 @media screen and (min-width: 768px){
     .links{
         li.wishlist,li.welcome{
@@ -1193,7 +1199,7 @@ footer block
 @media screen and (max-width: 499px){
     .panel.header{
         .logo img{
-            width:40%;
+            width:50%;
         }
     }
 }
@@ -1601,9 +1607,11 @@ footer block
                     }
                     .field.admin__field-option{
                         clear: inherit;
-                        width: 33.33%;
+                        min-width: 30.33%;
                         float: left;
-                        padding-right: 10px;
+                        margin-right: 10px;
+                        background: #F5F5F5;
+                        border: 1px dotted #CECECE;
                         cursor: pointer;
                         &:hover .label{
                             outline:2px solid #a11a52;
@@ -1612,7 +1620,7 @@ footer block
                             outline:2px solid #a11a52;
                         }
                         .label{
-                            background: #F5F5F5;
+
                             display:inline-block;
                             cursor: pointer;
                             min-width: 75px;
@@ -1620,7 +1628,7 @@ footer block
                             text-align:center;
                             line-height:20px;
                             height: 30px;
-                            border:1px dotted #CECECE;
+
                             span{
                                 font-size: 1.2rem;
                                 font-weight: 500;
@@ -1632,7 +1640,7 @@ footer block
         }
     }
 }
-@media screen and (max-width: 400px){
+@media screen and (max-width: 450px){
     .catalog-product-view{
         .product-add-form {
             .box-tocart {
@@ -4157,6 +4165,7 @@ body.catalog-product-view .product.info.detailed .product.description{
 }
 .cms-index-index .price-box.price-final_price{
     text-align: center;
+    display: block;
 }
 .cms-index-index .customer-review{
     position: relative;
@@ -4249,3 +4258,16 @@ body.catalog-product-view .product.info.detailed .product.description{
 #one-step-checkout-form .checkout-review-load .data-table .grand.totals .price{
     color: #dd127b;
 }
+
+.user_account{
+    background: url("../images/useraccount.jpg");
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    left: 0px;
+    top: 10px;
+    background-size: 26px;
+    margin-left: 60px;
+    margin-top: 5px;
+}
+
